langtools/test/tools/javac/lambda/typeInference/InferenceTest_neg5.out
InferenceTest_neg5.java:14:21: compiler.err.prob.found.req: (compiler.misc.cyclic.inference: X)
1 error
